WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38913
REGRESSION(
r58520
): Implicit submission on forms with button type="submit" no longer works
https://bugs.webkit.org/show_bug.cgi?id=38913
Summary
REGRESSION(r58520): Implicit submission on forms with button type="submit" no...
Dimitri Glazkov (Google)
Reported
2010-05-11 09:28:37 PDT
REGRESSION(
r58520
): Implicit submission on forms with button type="submit" no longer works
Attachments
Patch
(11.72 KB, patch)
2010-05-11 10:49 PDT
,
Dimitri Glazkov (Google)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2010-05-11 10:31:25 PDT
Turns out my super-duper test had incomplete coverage.
http://www.shacknews.com/search.x?terms=abcdef&type=comments
no longer implicitly submits. Patch coming up.
Dimitri Glazkov (Google)
Comment 2
2010-05-11 10:49:09 PDT
Created
attachment 55720
[details]
Patch
Darin Adler
Comment 3
2010-05-11 10:55:57 PDT
Comment on
attachment 55720
[details]
Patch I would have preferred to see the bug fix separate from the cleanup. Clearly all that was needed to fix the bug was to check isSuccessfulSubmitButton even when the element is not an <input>. And the renaming and refactoring obscures that change. The final resulting code looks great. r=me
Alexey Proskuryakov
Comment 4
2010-05-11 11:05:34 PDT
<
rdar://problem/7969230
>
Dimitri Glazkov (Google)
Comment 5
2010-05-11 11:09:42 PDT
I apologize, I started with a fix and then it was looking uglier and uglier. I have another patch that makes it even less ugly, but I'll land this first, then lick it some more.
Dimitri Glazkov (Google)
Comment 6
2010-05-11 15:01:37 PDT
Committed
r59173
: <
http://trac.webkit.org/changeset/59173
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug