2010-05-11  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Darin Adler.

        REGRESSION(r58520): Implicit submission on forms with button type="submit" no longer works
        https://bugs.webkit.org/show_bug.cgi?id=38913

        Updated the test to include coverage of button elements.

        * fast/forms/enter-clicks-buttons-expected.txt: Updated expectations to account for implicit
            submission which now correctly happens from the right element (button).
        * fast/forms/implicit-submission-expected.txt: Updated expectations with new test results.
        * fast/forms/implicit-submission.html: Added tests and code to cover button elements.
2010-05-11  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        REGRESSION(r58520): Implicit submission on forms with button type="submit" no longer works
        https://bugs.webkit.org/show_bug.cgi?id=38913

        * Widened the check for a successful submit button to include all HTMLFormControlElements.
        * Clarified implicit submission code by:
            - introducing HTMLFormControlElement::canTriggerImplicitSubmission flag,
            - getting rid of static casting and checking for tag names.

        * html/HTMLFormControlElement.h:
        (WebCore::HTMLFormControlElement::canTriggerImplicitSubmission): Added.
        * html/HTMLFormElement.cpp:
        (WebCore::HTMLFormElement::submitImplicitly): Renamed parameters for clarity, refactored code
            to use canTriggerImplicitSubmission.
        * html/HTMLFormElement.h: Renamed parameter for clarity.
        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::defaultEventHandler):  Used canTriggerImplicitSubmission()
            instead of isTextField() for clarity.
        * html/HTMLInputElement.h:
        (WebCore::HTMLInputElement::canTriggerImplicitSubmission): Added.
        * html/HTMLIsIndexElement.h:
        (WebCore::HTMLIsIndexElement::canTriggerImplicitSubmission): Added.

Canonical link: https://commits.webkit.org/50411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59173 268f45cc-cd09-0410-ab3c-d52691b4dbfc