third_party/WebKit/WebCore/html/HTMLFormElement.h
@@ -92,7 +92,7 @@ public:
 
     virtual bool isURLAttribute(Attribute*) const;
     
-    void submitImplicitly(Event*, bool fromTextField);
+    void submitImplicitly(Event*, bool fromImplicitSubmissionTrigger);
     bool formWouldHaveSecureSubmission(const String& url);
 
     String name() const;
